--- a/5.3 CSS Selectors/style.css
+++ b/5.3 CSS Selectors/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 ol {
   margin-left: -40px;
   margin-top: -20px;
@@ -5,3 +7,23 @@ ol {
 }
 
 /* Write your CSS below, don't change the rules above. */
+
+* {
+  text-align: center;
+}
+
+p {
+  color: red;;
+}
+
+.note {
+  font-size: 20px;
+}
+
+#id-selector-demo {
+  color: green;
+}
+
+li[value="4"] {
+  color: blue;
+}
