--- a/7.0 CSS Cascade/style.css
+++ b/7.0 CSS Cascade/style.css
@@ -10,3 +10,24 @@ p {
   margin: 0;
   padding: 0;
 }
+
+
+.box {
+  padding: 4px;
+}
+.white-text {
+  color: white;
+  background-color: red;
+}
+
+.inner-box {
+  background-color: red;
+}
+
+.yellow-text {
+  color: yellow;
+}
+
+#outer-box {
+  border: 3px solid purple;
+}
