--- a/7.1 Combining Selectors/style.css
+++ b/7.1 Combining Selectors/style.css
@@ -1,1 +1,29 @@
 /* Write your code here: */
+@charset "UTF-8";
+
+
+
+h1,
+h2 {
+    color: blueviolet;
+}
+
+
+.box>p {
+    color: firebrick;
+}
+
+
+.box li {
+    color: blue;
+}
+
+
+li.done {
+    color: green;
+}
+
+
+ul p.done {
+    font-size: 0.5rem;
+}
